Refactor: Improve code style, type safety, and test resource handling across various files.