@@ -1,19 +1,20 @@
-import java.io.* ;
-import java.net.* ;
+import java.io.*;
+import java.net.*;
 import com.google.gson.*;
 
 public class MediaApi {
 	private Gson gson;
-	private	String apiUrl = System.getenv("MEDIA_API");
-	private	String apiKey = System.getenv("KEY_LUCOS_MEDIA_METADATA_API");
+	private String apiUrl = System.getenv("MEDIA_API");
+	private String apiKey = System.getenv("KEY_LUCOS_MEDIA_METADATA_API");
 
 	public MediaApi() {
 		gson = CustomGson.get(this);
 	}
+
 	private InputStreamReader fetch(String path) throws MalformedURLException, IOException {
-		URL url = new URL(apiUrl+path);
+		URL url = URI.create(apiUrl + path).toURL();
 		HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-		connection.setRequestProperty("Authorization", "key "+apiKey);
+		connection.setRequestProperty("Authorization", "key " + apiKey);
 		int responseCode = connection.getResponseCode();
 		if (responseCode == HttpURLConnection.HTTP_NOT_FOUND) {
 			throw new IOException("Not Found");
@@ -23,12 +24,15 @@ public class MediaApi {
 		return new InputStreamReader(connection.getInputStream());
 
 	}
+
 	public Track fetchTrack(String path) throws MalformedURLException, IOException {
 		return gson.fromJson(fetch(path), Track.class);
 	}
+
 	public MediaApiResult fetchTracks(String path) throws MalformedURLException, IOException {
 		return gson.fromJson(fetch(path), MediaApiResult.class);
 	}
+
 	public MediaCollection[] fetchCollections(String path) throws MalformedURLException, IOException {
 		return gson.fromJson(fetch(path), MediaCollection[].class);
 	}
